--- a/Style.css
+++ b/Style.css
@@ -120,6 +120,10 @@ nav a {
 nav a:hover {
     color: #fff;
     background-color: crimson;
+    border-bottom: 5px solid #333;
+    border-radius: 10%;
+    border-left: 0px solid;
+    border-right: 5px solid black
 }
 
 .header-right {
@@ -184,28 +188,17 @@ footer {
     }
 }
 
-#about hr {
+#about hr,
+#skills hr,
+#contact hr,
+#projects hr,
+#Education hr {
     width: 60px;
     height: 3px;
     background-color: #007bff;
     border: none;
     margin: 10px auto 30px auto;
-}
-
-#skills hr {
-    width: 60px;
-    height: 3px;
-    background-color: #007bff;
-    border: none;
-    margin: 10px auto 30px auto;
-}
-
-#contact hr {
-    width: 60px;
-    height: 3px;
-    background-color: #007bff;
-    border: none;
-    margin: 10px auto 30px auto;
+    border-radius: 50%;
 }
 
 #projects {
@@ -229,13 +222,6 @@ footer {
     color: #333;
 }
 
-#projects hr {
-    width: 60px;
-    height: 3px;
-    background-color: #007bff;
-    border: none;
-    margin: 10px auto 30px auto;
-}
 
 #projects table {
     width: 100%;
@@ -302,14 +288,6 @@ footer {
     margin-bottom: 20px;
 }
 
-#Education hr {
-    width: 60px;
-    height: 3px;
-    background-color: #007bff;
-    border: none;
-    margin: 10px auto 30px auto;
-}
-
 .container {
     max-width: 1000px;
     margin: auto;
@@ -345,4 +323,11 @@ footer {
         flex-direction: column;
         align-items: center;
     }
+}
+
+
+.header-left h1 {
+    border-left: 3px solid #fff;
+    border-radius: 5%;
+    font-family: cursive;
 }
